# user_growth_insight

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml
docs/: DEPLOYMENT.md
preview/: app.js  index.html  server.py  style.css
scripts/: verify_app.py
user_growth_insight/: hooks.py  modules.txt  patches.txt
user_growth_insight/api/: dashboard.py  metrics.py
user_growth_insight/config/: desktop.py
user_growth_insight/data/: user_service_lifecycle_mock.json
user_growth_insight/fixtures/: user_service_lifecycle.json
user_growth_insight/public/css/: user_growth_dashboard.css
user_growth_insight/public/js/: desk_shortcuts.js
user_growth_insight/setup/: seed.py
user_growth_insight/user_growth_insight/doctype/user_service_lifecycle/: user_service_lifecycle.js  user_service_lifecycle.json  user_service_lifecycle.py  user_service_lifecycle_list.js
user_growth_insight/user_growth_insight/module_def/user_growth_insight/: user_growth_insight.json
user_growth_insight/user_growth_insight/page/user_growth_dashboard/: user_growth_dashboard.js  user_growth_dashboard.json
user_growth_insight/user_growth_insight/report/user_growth_overview/: user_growth_overview.js  user_growth_overview.json  user_growth_overview.py
user_growth_insight/user_growth_insight/workspace/user_growth_insight/: user_growth_insight.json
