[project]
name = "user_growth_insight"
authors = [
    { name = "Codex", email = "codex@example.com" }
]
description = "Frappe app for user service lifecycle, growth reporting, and executive dashboard"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.frappe]
app_name = "user_growth_insight"
app_title = "User Growth Insight"
app_publisher = "Codex"
app_description = "User service lifecycle records, growth report, and dashboard page"
app_email = "codex@example.com"
app_license = "MIT"
